--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/tailwind-config",
+  "name": "@dict/tailwind-config",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -20,12 +20,12 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
+    "@dict/eslint-config": "workspace:*",
+    "@dict/prettier-config": "workspace:*",
+    "@dict/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@dict/prettier-config"
 }
