--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo run typecheck",
-    "ui-add": "turbo run ui-add"
+    "ui-add": "turbo run ui-add",
+    "supabase:start": "turbo -F @dict/supabase start",
+    "supabase:stop": "turbo -F @dict/supabase stop"
   },
   "devDependencies": {
     "@dict/prettier-config": "workspace:*",
