--- a/turbo.json
+++ b/turbo.json
@@ -54,6 +54,14 @@
       "cache": false,
       "interactive": true
     },
+    "stop": {
+      "cache": false,
+      "interactive": true
+    },
+    "start": {
+      "cache": false,
+      "interactive": true
+    },
     "studio": {
       "cache": false,
       "persistent": true
@@ -65,6 +73,8 @@
   },
   "globalEnv": [
     "POSTGRES_URL",
+    "SUPABASE_SERVICE_ROLE_KEY",
+    "SUPABASE_URL",
     "AUTH_GOOGLE_ID",
     "AUTH_GOOGLE_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
