--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -34,6 +34,7 @@
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
+    "postgres": "^3.4.4",
     "zod": "catalog:"
   },
   "devDependencies": {
