--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@dict/tsconfig/internal-package.json",
   "compilerOptions": {},
-  "include": ["src"],
+  "include": ["src", "*.ts"],
   "exclude": ["node_modules"]
 }
