--- a/turbo.json
+++ b/turbo.json
@@ -72,6 +72,7 @@
     }
   },
   "globalEnv": [
+    "NEXT_BUNDLE_ANALYZER",
     "POSTGRES_URL",
     "SUPABASE_SERVICE_ROLE_KEY",
     "SUPABASE_URL",
