🐞 fix(packages/db | packages/supabase | apps/nextjs): configura conexion db temporal sin authjs middleware
ver discusión >> https://github.com/supabase/cli/issues/2474#issuecomment-2267649268

--- a/packages/supabase/package.json
+++ b/packages/supabase/package.json
@@ -4,13 +4,13 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    "./client": "./client/index.ts"
+    "./client": "./dist/index.ts"
   },
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf .turbo node_modules",
-    "dev": "tsc",
+    "dev": "cd ./server && supabase status && cd ../ && tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
