--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,11 @@
         "^topo"
       ]
     },
+    "test": {},
+    "test:watch": {
+      "cache": false,
+      "persistent": true
+    },
     "build": {
       "dependsOn": [
         "^build"
