--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,7 +15,9 @@
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@dict/db": "workspace:*",
@@ -34,7 +36,8 @@
     "@dict/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "^2.0.5"
   },
   "prettier": "@dict/prettier-config"
 }
