--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^20.14.9",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
+    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^7.4.2",
     "eslint": "catalog:",
     "jiti": "^1.21.6",
