--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -32,8 +32,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
     "nativewind": "~4.0.36",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
+    "react": "19.0.0-rc-04bd67a4-20240924",
+    "react-dom": "19.0.0-rc-04bd67a4-20240924",
     "react-native": "~0.74.3",
     "react-native-css-interop": "~0.0.34",
     "react-native-gesture-handler": "~2.16.2",
