--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,9 +25,9 @@
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
     "geist": "^1.3.0",
-    "next": "^14.2.4",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-04bd67a4-20240924",
+    "react-dom": "19.0.0-rc-04bd67a4-20240924",
     "react-icons": "^5.2.1",
     "superjson": "2.2.1",
     "zod": "catalog:"
