--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -24,10 +24,10 @@
     "@auth/drizzle-adapter": "^1.4.1",
     "@dict/db": "workspace:*",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "next": "^14.2.4",
+    "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.19",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
+    "react": "19.0.0-rc-04bd67a4-20240924",
+    "react-dom": "19.0.0-rc-04bd67a4-20240924",
     "zod": "catalog:"
   },
   "devDependencies": {
