🐳 chore(root): MANTENIMIENTO DE REPOSITORIO
combina la rama Develop con los cambios de t3-turbo hasta el commit : 86c5f8898ec67de0c1af6a893f64f1476fb40bb9
fix(deps): update dependency @t3-oss/env-nextjs to ^0.11.1 (#1173) - Sep 19, 2024

--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@dict/tsconfig/internal-package.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "emitDeclarationOnly": false
+  },
   "include": ["src", "*.ts"],
   "exclude": ["node_modules"]
 }
