--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.ts",
   "scripts": {
-    "clean": "git clean -xdf .expo .turbo node_modules",
+    "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
@@ -16,17 +16,17 @@
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
-    "@expo/metro-config": "^0.18.8",
+    "@expo/metro-config": "^0.18.11",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
-    "expo": "~51.0.18",
+    "expo": "~51.0.27",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.19",
+    "expo-dev-client": "~4.0.23",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.21",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -34,18 +34,18 @@
     "nativewind": "~4.0.36",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
-    "react-native": "~0.74.3",
+    "react-native": "~0.74.5",
     "react-native-css-interop": "~0.0.34",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "~4.10.1",
+    "react-native-safe-area-context": "~4.10.8",
     "react-native-screens": "~3.31.1",
     "superjson": "2.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/runtime": "^7.24.7",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
     "@dict/api": "workspace:*",
     "@dict/eslint-config": "workspace:*",
     "@dict/prettier-config": "workspace:*",
@@ -55,7 +55,7 @@
     "@types/react": "catalog:react18",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
   "prettier": "@dict/prettier-config"
