--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm with-env next build",
-    "clean": "git clean -xdf .next .turbo node_modules",
+    "clean": "git clean -xdf .cache .next .turbo node_modules",
     "dev": "pnpm with-env next dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
@@ -19,16 +19,16 @@
     "@dict/db": "workspace:*",
     "@dict/ui": "workspace:*",
     "@dict/validators": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@next/bundle-analyzer": "^14.2.13",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
-    "geist": "^1.3.0",
-    "next": "^14.2.4",
+    "geist": "^1.3.1",
+    "next": "^14.2.5",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
-    "react-icons": "^5.2.1",
     "superjson": "2.2.1",
     "zod": "catalog:"
   },
@@ -37,8 +37,7 @@
     "@dict/prettier-config": "workspace:*",
     "@dict/tailwind-config": "workspace:*",
     "@dict/tsconfig": "workspace:*",
-    "@next/bundle-analyzer": "^14.2.5",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.15",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
     "autoprefixer": "^10.4.20",
@@ -46,7 +45,7 @@
     "eslint": "catalog:",
     "jiti": "^1.21.6",
     "prettier": "catalog:",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
   "prettier": "@dict/prettier-config"
