--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @dict/db push",
     "db:studio": "turbo -F @dict/db studio",
-    "dev": "turbo watch dev",
+    "dev": "turbo watch dev --continue",
     "dev:next": "turbo watch dev -F @dict/nextjs...",
-    "format": "turbo run format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
-    "format:fix": "turbo run format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
-    "lint": "turbo run lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
-    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location node_modules/.cache/.eslintcache",
+    "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
+    "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
+    "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
+    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo run typecheck",
@@ -30,9 +30,9 @@
   },
   "devDependencies": {
     "@dict/prettier-config": "workspace:*",
-    "@turbo/gen": "^2.0.8",
+    "@turbo/gen": "^2.1.1",
     "prettier": "catalog:",
-    "turbo": "^2.0.8",
+    "turbo": "^2.1.1",
     "typescript": "catalog:"
   },
   "prettier": "@dict/prettier-config"
