--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@dict/tsconfig/internal-package.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
+    "emitDeclarationOnly": false
   },
   "include": ["src"],
   "exclude": ["node_modules"]
