--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf .turbo node_modules",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
@@ -20,12 +20,12 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@auth/core": "0.32.0",
-    "@auth/drizzle-adapter": "^1.4.1",
+    "@auth/core": "0.34.2",
+    "@auth/drizzle-adapter": "^1.4.2",
     "@dict/db": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "next": "^14.2.4",
-    "next-auth": "5.0.0-beta.19",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "next": "^14.2.5",
+    "next-auth": "5.0.0-beta.20",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "zod": "catalog:"
