--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "@dict/tsconfig/internal-package.json",
-  "compilerOptions": {},
-  "include": ["*.ts", "src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
